# nelder_mead_simplex

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
src/: CMakeLists.txt  binary1.cpp  class1.cpp  class1.h  class2.cpp  class2.h  main.cpp  nelder_mead.cpp  nelder_mead.h
tests/: class1_test.cpp  nelder_mead_test.cpp
